syntax = "proto3";

// PageRequest is to be embedded in gRPC request messages for efficient
// pagination. Ex:
//
//  message SomeRequest {
//          Foo some_parameter = 1;
//          PageRequest pagination = 2;
//  }
message PageRequest {
  // key is a value returned in PageResponse.next_key to begin
  // querying the next page most efficiently. Only one of offset or key
  // should be set.
  bytes key = 1;

  // offset is a numeric offset that can be used when key is unavailable.
  // It is less efficient than using key. Only one of offset or key should
  // be set.
  uint64 offset = 2;

  // limit is the total number of results to be returned in the result page.
  // If left empty it will default to a value to be set by each app.
  uint64 limit = 3;

  // count_total is set to true  to indicate that the result set should include
  // a count of the total number of items available for pagination in UIs.
  // count_total is only respected when offset is used. It is ignored when key
  // is set.
  bool count_total = 4;

  // reverse is set to true if results are to be returned in the descending order.
  bool reverse = 5;
}

// PageResponse is to be embedded in gRPC response messages where the
// corresponding request message has used PageRequest.
//
//  message SomeResponse {
//          repeated Bar results = 1;
//          PageResponse page = 2;
//  }
message PageResponse {
  // next_key is the key to be passed to PageRequest.key to
  // query the next page most efficiently. It will be empty if
  // there are no more results.
  bytes next_key = 1;

  // total is total number of results available if PageRequest.count_total
  // was set, its value is undefined otherwise
  uint64 total = 2;
}

enum RFFSourceState {
  WAITING = 0;
  DEPOSITED = 1;
}

enum Universe {
  ETHEREUM = 0;
  FUEL = 1;
  SOLANA = 2;
  TRON = 3;
}

message RFFSourcePair {
  Universe universe = 1;
  bytes chainID = 2;
  bytes contractAddress = 3;
  bytes value = 4;
  RFFSourceState status = 5;
}

message SignatureDatum {
  Universe universe = 1;
  bytes address = 2;
  bytes signature = 3; // WARNING: This is NOT validated by Cosmos any more
  bytes hash = 4; // is to be left empty by the creator and is to be filled in during signature verification
}

message RFFDestinationPair {
  bytes contractAddress = 1;
  bytes value = 2; // amount
}

message RequestForFunds {
  uint64 id = 1;
  repeated RFFSourcePair sources = 2;
  Universe destinationUniverse = 9;
  bytes destinationChainID = 3;
  bytes recipientAddress = 11;
  repeated RFFDestinationPair destinations = 4;
  bytes nonce = 5;
  uint64 expiry = 6;
  repeated SignatureDatum signatureData = 10;

  // Cosmos user (???)/Cosmos internal fields
  string user = 101;
  bytes fulfilledBy = 102; // the EVM address that fulfilled it on the destination chain
  uint64 fulfilledAt = 103;

  bool deposited = 104;
  bool fulfilled = 105;
  bool settled = 106;
  bool refunded = 107;
  int64 creationBlock = 109;
}

message RFFCreatedEvent {
  uint64 id = 1;
}

message RFFAllDepositsCompleteEvent {
  uint64 id = 1;
}

message RFFFulfilledEvent {
  uint64 id = 1;
}

message RouteFee {
  Universe sourceUniverse = 1;
  Universe destinationUniverse = 2;
  bytes sourceChainID = 3;
  bytes destinationChainID = 4;
  bytes sourceTokenAddress = 5;
  bytes destinationTokenAddress = 6;
  // 7 â†” 9 are reserved for new fields
  uint32 feeBP = 10;
}

message SolverAddress {
  Universe universe = 1;
  bytes address = 2;
  bytes signature = 3;
}

message SolverData {
  string cosmosAddress = 1;

  repeated RouteFee advertisedFees = 2;
  repeated SolverAddress addresses = 3;
}

// Settlement defines the Settlement message.
message Settlement {
  bytes id = 1;
  Universe universe = 2;
  bytes chainID = 3;
  repeated bytes amounts = 4;
  repeated bytes contractAddresses = 5;
  repeated bytes solvers = 6;
}

message FixedFeeTuple {
  Universe universe = 1;
  bytes chainID = 2;
  bytes tokenAddress = 3;
  bytes fee = 4;
}

message AdminFeeRecipient {
  Universe universe = 1;
  bytes address = 2;
}

message ProtocolFees {
  uint64 feeBP = 1;
  repeated FixedFeeTuple collectionFees = 2;
  repeated FixedFeeTuple fulfilmentFees = 3;
  string admin = 4;
  repeated AdminFeeRecipient feeRecipients = 5;
}

message PendingSettlement {
  uint64 id = 1;
  Universe universe = 2;
  bytes chainID = 3;
  bytes contractAddress = 4;
  bytes amount = 5;
  bytes recipient = 6;
}

message FulfilmentClaim {}

message RefundClaim {}

message BasicClaim {
  uint64 RFFID = 1;

  oneof claim {
    FulfilmentClaim fulfilmentClaim = 2;
    RefundClaim refundClaim = 3;
  }
}

// PendingClaims defines the PendingClaims message.
message PendingClaims {
  uint64 id = 1;
  string creator = 2;

  BasicClaim claim = 3;
  uint64 timestamp = 5;
  uint32 attempts = 4;
}

message FulfilmentVerdict {
  repeated uint32 depositedIndexes = 1;
  bytes solverAddress = 2;
}

message RefundVerdict {
  repeated uint32 depositedIndexes = 1;
}

message ClaimVerdict {
  bool approved = 1;
  oneof verdict {
    FulfilmentVerdict fulfilmentVerdict = 10;
    RefundVerdict refundVerdict = 11;
  }
}

message ChainParams {
  bytes chainID = 1;
  bool allTokensDisabled = 2;
  repeated bytes disabledTokens = 3;
}

message UniverseParams {
  Universe universe = 1;
  bool allChainsDisabled = 2;
  repeated ChainParams chainParams = 3;
}

// Params defines the parameters for the module.
message Params {
  bytes mpcAddress = 1;
  uint32 maxAttempts = 2;
  uint32 settlementNo = 3;

  bool newRFFDisabled = 10;
  repeated UniverseParams universeParams = 11;
}
